--- a/client/src/styles/Transactions.css
+++ b/client/src/styles/Transactions.css
@@ -5,3 +5,12 @@
     border: 1.5px solid white;
     border-radius: 40px;
 }
+/* .small-gap{
+    background-color: white;
+    color: black;
+}
+
+.big-gap {
+    background-color: blue;
+    color: black;
+} */
