--- a/client/src/styles/SignIn.css
+++ b/client/src/styles/SignIn.css
@@ -1,107 +1,96 @@
-header, body{
-    text-align: center;
+#sign-in-header,
+form {
+  text-align: center;
+}
+
+form {
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+  margin: 0 auto;
+  padding-bottom: 2em;
+}
+
+#sign-in-header {
+  margin-bottom: 40px;
 }
 
 input {
-    /* Placeholder */
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 14px;
+  gap: 5px;
+  width: 545px;
+  height: 44px;
+  background: #ffffff;
+  border: 1.5px solid #646464;
+  border-radius: 8px;
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
+}
 
-
-    box-sizing: border-box;
-
-    /* Auto layout */
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 14px;
-    gap: 5px;
-
-    width: 545px;
-    height: 44px;
-
-    /* White */
-
-    background: #FFFFFF;
-    /* Main Colors/Gray/2 */
-
-    border: 1.5px solid #646464;
-    border-radius: 8px;
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
+input {
+  text-align: cente;
 }
 
 label {
-    /* Label */
-
-
-    /* Auto layout */
-
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px 5px;
-    gap: 10px;
-
-    width: 545px;
-    height: 36px;
-
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
-    font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px 5px;
+  gap: 10px;
+  width: 545px;
+  height: 36px;
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+  font-weight: bold;
+  text-align: left;
 }
 
 header {
-    color: #FFFFFF;
-    font-weight: bold;
-    font-size: xx-large;
-}
-.password-container{
-    width: 400px;
-    position: relative;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: xx-large;
 }
 
-#fa-eye{
-    position: absolute;
-    top: 28%;
-    left: 130%;
-    cursor: pointer;
-    color: lightgray;
+.password-container {
+  width: 400px;
+  position: relative;
+  text-align: center;
 }
 
-button[type = "submit"] {
-    /* Buttons */
-
-
-    /* Auto layout */
-
-    /* display: flex; */
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 16px;
-    gap: 5px;
-    margin: 50px;
-
-    /* position: absolute; */
-    width: 249px;
-    height: 48px;
-    left: 739px;
-    top: 616px;
-
-    background: #FFD600;
-    border-radius: 30px;
+#fa-eye {
+  position: absolute;
+  top: 28%;
+  left: 130%;
+  cursor: pointer;
+  color: lightgray;
 }
 
-.signup-link>p[type ="button"]{
-    color: #322A95;
+button[type='submit'] {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 16px;
+  gap: 5px;
+  margin: 50px;
+
+  /* position: absolute; */
+  width: 249px;
+  height: 48px;
+  left: 739px;
+  top: 616px;
+
+  background: #ffd600;
+  border-radius: 30px;
+}
+
+.signup-link > p[type='button'] {
+  color: #322a95;
 }
