--- a/client/src/styles/SignUp.css
+++ b/client/src/styles/SignUp.css
@@ -1,114 +1,115 @@
-header, body {
-    text-align: center;
-    height: 100%;
+#sign-up-header, form {
+  text-align: center;
+  height: 100%;
+}
+
+#sign-up-header {
+  margin-bottom: 40px;
 }
 
 input {
-    /* Placeholder */
+  /* Placeholder */
 
+  box-sizing: border-box;
 
-    box-sizing: border-box;
+  /* Auto layout */
 
-    /* Auto layout */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 14px;
+  gap: 5px;
 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 14px;
-    gap: 5px;
+  width: 545px;
+  height: 44px;
 
-    width: 545px;
-    height: 44px;
+  /* White */
 
-    /* White */
+  background: #ffffff;
+  /* Main Colors/Gray/2 */
 
-    background: #FFFFFF;
-    /* Main Colors/Gray/2 */
+  border: 1.5px solid #646464;
+  border-radius: 8px;
 
-    border: 1.5px solid #646464;
-    border-radius: 8px;
+  /* Inside auto layout */
 
-    /* Inside auto layout */
-
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
 }
 
 label {
-    /* Label */
+  /* Label */
 
+  /* Auto layout */
 
-    /* Auto layout */
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px 5px;
+  gap: 10px;
 
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px 5px;
-    gap: 10px;
+  width: 545px;
+  height: 36px;
+  margin-top: 10px;
+  margin-bottom: -10px;
+  /* Inside auto layout */
 
-    width: 545px;
-    height: 36px;
-    margin-top: 10px;
-    margin-bottom: -10px;
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
-    font-weight: bold;
-    color: white;
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+  font-weight: bold;
+  color: white;
 }
 
 header {
-    color: #FFFFFF;
-    font-weight: bold;
-    font-size: xx-large;
-    margin-bottom: -40px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: xx-large;
+  margin-bottom: -40px;
 }
-.password-container{
-    width: 400px;
-    position: relative;
-}
-
-#fa-eye{
-    position: absolute;
-    top: 28%;
-    left: 130%;
-    cursor: pointer;
-    color: lightgray;
+.password-container {
+  width: 400px;
+  position: relative;
 }
 
-button[type = "submit"] {
-    /* Buttons */
+#fa-eye {
+  position: absolute;
+  top: 28%;
+  left: 130%;
+  cursor: pointer;
+  color: lightgray;
+}
 
+button[type='submit'] {
+  /* Buttons */
 
-    /* Auto layout */
+  /* Auto layout */
 
-    /* display: flex; */
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 16px;
-    gap: 5px;
-    margin: 50px;
+  /* display: flex; */
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 16px;
+  gap: 5px;
+  margin: 50px;
 
-    /* position: absolute; */
-    width: 249px;
-    height: 48px;
-    left: 739px;
-    top: 616px;
+  /* position: absolute; */
+  width: 249px;
+  height: 48px;
+  left: 739px;
+  top: 616px;
 
-    background: #FFD600;
-    border-radius: 30px;
+  background: #ffd600;
+  border-radius: 30px;
 }
 
 .signin-link {
-    margin-top: -50px;
+  margin-top: -40px;
 }
 
-.signin-link>p[type ="button"]{
-    color: #322A95;
+.signin-link > p[type='button'] {
+  color: #322a95;
 }
