--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,11 @@
-#root {
+/* #root {
   width: 100vw;
   max-width: 100vw;
   height: 100vh;
-  min-height: 100vh;
-}
+  min-height: 100%;
+} */
+
+/* body {
+  height: 100vh;
+  width: 100vw;
+} */
