Fix styling before merging
Changes in Transaction.jsx

--- a/client/src/styles/Transaction.css
+++ b/client/src/styles/Transaction.css
@@ -30,7 +30,7 @@ label {
   font-size: 30px;
 }
 
-button[type='submit'] {
+#transaction-submit-button {
   display: flex;
   justify-content: center;
   align-items: center;
