Style the card view

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,14 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body {
+  margin: 0;
+  /* display: flex; */
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
