--- a/client/src/styles/Transactions.css
+++ b/client/src/styles/Transactions.css
@@ -1,10 +1,11 @@
-
 header {
-    text-align: center;
-    color: black;
+  text-align: center;
+  color: white;
+  padding-top: 2%;
+  padding-left: 23%;
+  align-items: center;
 }
-
 body {
-    background: inherit;
-    width: 100vw;
+  background: inherit;
+  width: 100vw;
 }
