--- a/client/src/components/pages/TransactionPage/Transactions.css
+++ b/client/src/components/pages/TransactionPage/Transactions.css
@@ -2,10 +2,11 @@ header {
   text-align: center;
   color: white;
   padding-top: 20px;
-  padding-left: 25%;
+  /* padding-left: 25%; */
   align-items: center;
   font-size: 50px;
 }
+
 body {
   background: inherit;
   width: 100vw;
