try to connect frontend and backend for Transaction page

--- a/client/src/components/pages/SignInPage/SignIn.css
+++ b/client/src/components/pages/SignInPage/SignIn.css
@@ -18,7 +18,7 @@ form {
 .signin-container {
   padding-top: 50px;
   text-align: center;
-  height: 100vh;
+  height: fit-content;
 }
 
 #sign-in-header {
