--- a/client/src/components/pages/DashboardPage/DashboardPage.css
+++ b/client/src/components/pages/DashboardPage/DashboardPage.css
@@ -1,10 +1,10 @@
 header {
   text-align: center;
   color: white;
-  padding-top: 20px;
-  padding-left: 25%;
   align-items: center;
   font-size: 50px;
+  padding-left: 50%;
+  display: flex;
 }
 body {
   background: inherit;
@@ -16,9 +16,4 @@ body {
     border: 0px;
     border-radius: 30px;
     padding: 20px;
-}
-
-.intro-bar {
-    text-align: center;
-    align-items: center;
 }
