--- a/client/src/components/pages/DashboardPage/DashboardPage.css
+++ b/client/src/components/pages/DashboardPage/DashboardPage.css
@@ -12,8 +12,24 @@ body {
 }
 
 .blur-background {
-    background-color: rgba(255, 255, 255, 0.3);
-    border: 0px;
-    border-radius: 30px;
-    padding: 20px;
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 0px;
+  border-radius: 30px;
+  padding: 20px;
+}
+
+.info-component {
+  text-align: center;
+  color: white;
+}
+
+.intro-bar {
+  text-align: center;
+  color: white;
+  align-items: center;
+  font-size: 50px;
+  font-weight: 800;
+  padding-left: 50%;
+  display: flex;
+  padding-top: 50px;
 }
