--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  background: radial-gradient(at 18% 99%, #fff700 0px, transparent 50%) repeat
+  /* background: radial-gradient(at 18% 99%, #fff700 0px, transparent 50%) repeat
       scroll 0% 0%,
     radial-gradient(at 30% 30%, #a38f3c 0px, transparent 50%) repeat scroll 0%
       0%,
@@ -23,12 +23,31 @@
       scroll 0% 0%,
     rgba(0, 0, 0, 0)
       radial-gradient(at 57% 33%, rgb(218, 83, 228) 0px, #a299ff 50%) repeat
-      scroll 0% 0%;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+      scroll 0% 0%; */
+  background: hsla(28, 100%, 92%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(28, 100%, 92%, 1) 0%,
+    hsla(222, 33%, 80%, 1) 53%,
+    hsla(230, 61%, 59%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(28, 100%, 92%, 1) 0%,
+    hsla(222, 33%, 80%, 1) 53%,
+    hsla(230, 61%, 59%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(28, 100%, 92%, 1) 0%,
+    hsla(222, 33%, 80%, 1) 53%,
+    hsla(230, 61%, 59%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FFEAD7", endColorstr="#BCC6DD", GradientType=1 );
 }
 
 body {
