--- a/client/src/components/Layout/TransactionCard/TransactionCard.css
+++ b/client/src/components/Layout/TransactionCard/TransactionCard.css
@@ -8,7 +8,27 @@
   left: 45%;
   top: 80%;
   transform: translate(-50%, -50%);
-  background-color: transparent;
+  background: hsla(233, 100%, 90%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(233, 100%, 90%, 1) 0%,
+    hsla(0, 0%, 89%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(233, 100%, 90%, 1) 0%,
+    hsla(0, 0%, 89%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(233, 100%, 90%, 1) 0%,
+    hsla(0, 0%, 89%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#CAD0FF", endColorstr="#E3E3E3", GradientType=1 );
 }
 
 .card-media {
