--- a/client/src/components/pages/auth/HomePage/HomePage.module.css
+++ b/client/src/components/pages/auth/HomePage/HomePage.module.css
@@ -14,7 +14,6 @@
 	font-family: 'Montserrat', sans-serif;
 	height: 100vh;
     width: 100vw;
-	margin: -20px 0 50px;
 }
 
 .h1 {
@@ -49,9 +48,6 @@
 
 .button {
 	border-radius: 20px;
-	/* border: 1px solid #FF4B2B; */
-	/* background-color: #FF4B2B; */
-
     background: hsla(312, 77%, 86%, 1);
 
     background: radial-gradient(circle, hsla(312, 77%, 86%, 1) 0%, hsla(220, 61%, 79%, 1) 100%);
@@ -65,6 +61,7 @@
 	font-size: 12px;
 	font-weight: bold;
 	padding: 12px 45px;
+	margin: 20px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	transition: transform 80ms ease-in;
